load("//bazel/zig:defs.bzl", "zig_library", "zig_test")

package(default_visibility = ["//visibility:public"])

filegroup(
    name = "app_srcs",
    srcs = [
        "app.zig",
        "platform.zig",
    ],
)

zig_library(
    name = "board",
    main = "std/board.zig",
    srcs = ["std/board.zig"],
    module_name = "board",
    deps = ["//lib/platform/std"],
)

zig_test(
    name = "selector_e2e",
    srcs = [":app_srcs"],
    main = "app.zig",
    deps = [":board"],
    size = "small",
    tags = ["std", "conformance"],
)

filegroup(name = "srcs", srcs = glob(["**/*"]))
