load("//bazel/zig:defs.bzl", "zig_binary", "zig_test")

package(default_visibility = ["//visibility:public"])

zig_test(
    name = "selector_test",
    srcs = ["main.zig"],
    main = "main.zig",
    deps = [
        "//lib/platform/std",
    ],
)

zig_binary(
    name = "benchmark",
    srcs = ["benchmark.zig"],
    main = "benchmark.zig",
    deps = [
        "//lib/platform/std",
    ],
    tags = ["manual"],
)
