# App sources for ESP-IDF examples
#
# Note: Individual apps have their own BUILD.bazel with esp_zig_app rules
# under examples/apps/*/esp/

package(default_visibility = ["//visibility:public"])

# All app source files (used by _apps in esp_idf_app for file copying)
filegroup(
    name = "all_apps",
    srcs = glob(
        ["**/*"],
        exclude = ["**/BUILD.bazel"],  # Exclude BUILD files
        allow_empty = True,
    ),
)
