# BK Kconfig override presets (modular, like examples/esp/BUILD.bazel)
#
# Unlike ESP's esp_sdkconfig which generates a COMPLETE sdkconfig,
# these are OVERRIDES appended to the Armino base project config.
# Only define what the base project doesn't already enable.

load("//bazel/bk/kconfig:defs.bzl", "bk_audio", "bk_ble", "bk_config", "bk_pwm", "bk_saradc", "bk_timer")

package(default_visibility = ["//visibility:public"])

# =============================================================================
# Feature modules
# =============================================================================

bk_pwm(name = "pwm")
bk_audio(name = "audio")
bk_saradc(name = "saradc")
bk_timer(name = "timer")
bk_ble(name = "ble")

# =============================================================================
# Assembled configs (override sets)
# =============================================================================

# PWM only
bk_config(
    name = "bk7258_pwm",
    modules = [":pwm"],
)

# Audio (speaker/mic)
bk_config(
    name = "bk7258_audio",
    modules = [":audio"],
)

# SARADC (analog input)
bk_config(
    name = "bk7258_saradc",
    modules = [":saradc"],
)

# BLE
bk_config(
    name = "bk7258_ble",
    modules = [":ble"],
)

# PWM + SARADC
bk_config(
    name = "bk7258_pwm_saradc",
    modules = [":pwm", ":saradc"],
)

# Full peripherals
bk_config(
    name = "bk7258_full",
    modules = [":pwm", ":audio", ":saradc", ":timer", ":ble"],
)
