# CI build targets - compile all ESP examples for all supported boards
#
# Usage:
#   bazel build //examples/ci:build_all --config=ci

load("//bazel/esp:transitions.bzl", "esp_board_build")

package(default_visibility = ["//visibility:public"])

# =============================================================================
# Per-board build targets (using board transitions)
# =============================================================================

# --- adc_button: korvo2_v3 ---
esp_board_build(name = "adc_button_korvo2_v3", target = "//examples/apps/adc_button/esp:app", board = "korvo2_v3")

# --- aec_test: korvo2_v3, lichuang_szp ---
esp_board_build(name = "aec_test_korvo2_v3", target = "//examples/apps/aec_test/esp:app", board = "korvo2_v3")
esp_board_build(name = "aec_test_lichuang_szp", target = "//examples/apps/aec_test/esp:app", board = "lichuang_szp")

# --- async_test: esp32s3_devkit ---
esp_board_build(name = "async_test_esp32s3_devkit", target = "//examples/apps/async_test/esp:app", board = "esp32s3_devkit")

# --- gpio_button: esp32s3_devkit, korvo2_v3, lichuang_szp (skip sim_raylib) ---
esp_board_build(name = "gpio_button_esp32s3_devkit", target = "//examples/apps/gpio_button/esp:app", board = "esp32s3_devkit")
# esp_board_build(name = "gpio_button_korvo2_v3", target = "//examples/apps/gpio_button/esp:app", board = "korvo2_v3")  # TODO: pre-existing board.zig error
esp_board_build(name = "gpio_button_lichuang_szp", target = "//examples/apps/gpio_button/esp:app", board = "lichuang_szp")

# --- http_speed_test: esp32s3_devkit (needs env) ---
esp_board_build(name = "http_speed_test_esp32s3_devkit", target = "//examples/apps/http_speed_test/esp:app", board = "esp32s3_devkit")

# --- https_speed_test: esp32s3_devkit (needs env) ---
esp_board_build(name = "https_speed_test_esp32s3_devkit", target = "//examples/apps/https_speed_test/esp:app", board = "esp32s3_devkit")

# --- led_strip_anim: esp32s3_devkit, korvo2_v3 ---
esp_board_build(name = "led_strip_anim_esp32s3_devkit", target = "//examples/apps/led_strip_anim/esp:app", board = "esp32s3_devkit")
# esp_board_build(name = "led_strip_anim_korvo2_v3", target = "//examples/apps/led_strip_anim/esp:app", board = "korvo2_v3")  # TODO: pre-existing board.zig error

# --- led_strip_flash: esp32s3_devkit, korvo2_v3 ---
esp_board_build(name = "led_strip_flash_esp32s3_devkit", target = "//examples/apps/led_strip_flash/esp:app", board = "esp32s3_devkit")
# esp_board_build(name = "led_strip_flash_korvo2_v3", target = "//examples/apps/led_strip_flash/esp:app", board = "korvo2_v3")  # TODO: pre-existing board.zig error

# --- memory_attr_test: esp32s3_devkit ---
esp_board_build(name = "memory_attr_test_esp32s3_devkit", target = "//examples/apps/memory_attr_test/esp:app", board = "esp32s3_devkit")

# --- motion_test: lichuang_szp ---
esp_board_build(name = "motion_test_lichuang_szp", target = "//examples/apps/motion_test/esp:app", board = "lichuang_szp")

# --- net_event_test: esp32s3_devkit (needs env) ---
esp_board_build(name = "net_event_test_esp32s3_devkit", target = "//examples/apps/net_event_test/esp:app", board = "esp32s3_devkit")

# --- ntp_test: esp32s3_devkit, korvo2_v3 (needs env) ---
esp_board_build(name = "ntp_test_esp32s3_devkit", target = "//examples/apps/ntp_test/esp:app", board = "esp32s3_devkit")
esp_board_build(name = "ntp_test_korvo2_v3", target = "//examples/apps/ntp_test/esp:app", board = "korvo2_v3")

# --- nvs_storage: esp32s3_devkit ---
esp_board_build(name = "nvs_storage_esp32s3_devkit", target = "//examples/apps/nvs_storage/esp:app", board = "esp32s3_devkit")

# --- pwm_fade: esp32s3_devkit ---
esp_board_build(name = "pwm_fade_esp32s3_devkit", target = "//examples/apps/pwm_fade/esp:app", board = "esp32s3_devkit")

# --- speaker_test: korvo2_v3, lichuang_szp ---
esp_board_build(name = "speaker_test_korvo2_v3", target = "//examples/apps/speaker_test/esp:app", board = "korvo2_v3")
esp_board_build(name = "speaker_test_lichuang_szp", target = "//examples/apps/speaker_test/esp:app", board = "lichuang_szp")

# --- tcp_speed_test: esp32s3_devkit (needs env) ---
esp_board_build(name = "tcp_speed_test_esp32s3_devkit", target = "//examples/apps/tcp_speed_test/esp:app", board = "esp32s3_devkit")

# --- temperature_sensor: esp32s3_devkit ---
esp_board_build(name = "temperature_sensor_esp32s3_devkit", target = "//examples/apps/temperature_sensor/esp:app", board = "esp32s3_devkit")

# --- timer_callback: esp32s3_devkit ---
esp_board_build(name = "timer_callback_esp32s3_devkit", target = "//examples/apps/timer_callback/esp:app", board = "esp32s3_devkit")

# --- tls_speed_test: esp32s3_devkit (needs env) ---
esp_board_build(name = "tls_speed_test_esp32s3_devkit", target = "//examples/apps/tls_speed_test/esp:app", board = "esp32s3_devkit")

# --- wifi_dns_lookup: esp32s3_devkit (needs env) ---
esp_board_build(name = "wifi_dns_lookup_esp32s3_devkit", target = "//examples/apps/wifi_dns_lookup/esp:app", board = "esp32s3_devkit")

# --- wifi_scan_test: esp32s3_devkit ---
esp_board_build(name = "wifi_scan_test_esp32s3_devkit", target = "//examples/apps/wifi_scan_test/esp:app", board = "esp32s3_devkit")

# =============================================================================
# Aggregate target
# =============================================================================

# All apps (requires --config=ci or manual --define flags for env-dependent apps)
filegroup(
    name = "build_all",
    srcs = [
        ":adc_button_korvo2_v3",
        ":aec_test_korvo2_v3",
        ":aec_test_lichuang_szp",
        ":async_test_esp32s3_devkit",
        ":gpio_button_esp32s3_devkit",
        # ":gpio_button_korvo2_v3",  # TODO: pre-existing board.zig error
        ":gpio_button_lichuang_szp",
        ":http_speed_test_esp32s3_devkit",
        ":https_speed_test_esp32s3_devkit",
        ":led_strip_anim_esp32s3_devkit",
        # ":led_strip_anim_korvo2_v3",  # TODO: pre-existing board.zig error
        ":led_strip_flash_esp32s3_devkit",
        # ":led_strip_flash_korvo2_v3",  # TODO: pre-existing board.zig error
        ":memory_attr_test_esp32s3_devkit",
        ":motion_test_lichuang_szp",
        ":net_event_test_esp32s3_devkit",
        ":ntp_test_esp32s3_devkit",
        ":ntp_test_korvo2_v3",
        ":nvs_storage_esp32s3_devkit",
        ":pwm_fade_esp32s3_devkit",
        ":speaker_test_korvo2_v3",
        ":speaker_test_lichuang_szp",
        ":tcp_speed_test_esp32s3_devkit",
        ":temperature_sensor_esp32s3_devkit",
        ":timer_callback_esp32s3_devkit",
        ":tls_speed_test_esp32s3_devkit",
        ":wifi_dns_lookup_esp32s3_devkit",
        ":wifi_scan_test_esp32s3_devkit",
    ],
)
