# ESP sdkconfig presets (fully modular)

load("//bazel/esp:defs.bzl", "esp_sdkconfig")
load("//bazel/esp/sdkconfig:app.bzl", "esp_app")
load("//bazel/esp/sdkconfig:core.bzl", "esp_core")
load("//bazel/esp/sdkconfig:freertos.bzl", "esp_freertos")
load("//bazel/esp/sdkconfig:littlefs.bzl", "esp_littlefs")
load("//bazel/esp/sdkconfig:log.bzl", "esp_log")
load("//bazel/esp/sdkconfig:lwip.bzl", "esp_lwip")
load("//bazel/esp/sdkconfig:psram.bzl", "esp_psram")
load("//bazel/esp/sdkconfig:spiffs.bzl", "esp_spiffs")
load("//bazel/esp/sdkconfig:validate.bzl", "esp_validate")
load("//bazel/esp/sdkconfig:wifi.bzl", "esp_wifi")
load("//bazel/esp/sdkconfig:sr.bzl", "esp_sr")
load("//bazel/esp/sdkconfig:crypto.bzl", "esp_crypto")
load("//bazel/esp/sdkconfig:newlib.bzl", "esp_newlib")

package(default_visibility = ["//visibility:public"])

# =============================================================================
# Core
# =============================================================================

esp_core(
    name = "core",
    idf_target = "esp32s3",
    cpu_freq_mhz = 240,
    flash_size_mb = 8,
    flash_mode = "qio",
    flash_freq = "80m",
)

# Core config for UART console (for Korvo and other boards with UART)
esp_core(
    name = "core_uart",
    idf_target = "esp32s3",
    cpu_freq_mhz = 240,
    flash_size_mb = 8,
    flash_mode = "qio",
    flash_freq = "80m",
)

# =============================================================================
# PSRAM
# =============================================================================

esp_psram(
    name = "psram",
    chip = "esp32s3",
    mode = "oct",
    speed = "80m",
)

# PSRAM with XIP - allows PSRAM access during flash operations
# Required for WiFi apps using PSRAM task stack
esp_psram(
    name = "psram_xip",
    chip = "esp32s3",
    mode = "oct",
    speed = "80m",
    xip_from_psram = True,
)

# =============================================================================
# FreeRTOS
# =============================================================================

esp_freertos(
    name = "freertos",
    hz = 1000,
    main_task_stack_size = 4096,
    task_wdt_timeout_s = 30,
    task_wdt_check_idle_cpu0 = True,
    task_wdt_check_idle_cpu1 = False,
)

# =============================================================================
# Log
# =============================================================================

esp_log(
    name = "log",
    default_level = "info",
)

# =============================================================================
# WiFi
# =============================================================================

esp_wifi(
    name = "wifi",
    static_rx_buffer_num = 16,
    dynamic_rx_buffer_num = 64,
    rx_ba_win = 32,
    tx_ba_win = 6,
)

# High throughput WiFi - for speed tests
esp_wifi(
    name = "wifi_fast",
    static_rx_buffer_num = 24,      # More static buffers
    dynamic_rx_buffer_num = 128,    # Double dynamic buffers
    rx_ba_win = 32,
    tx_ba_win = 16,                 # Larger TX window
)

# =============================================================================
# Crypto
# =============================================================================

# Disable mbedTLS (use pure Zig crypto)
esp_crypto(
    name = "no_mbedtls",
    disable_mbedtls = True,
)

# Enable mbedTLS with full features for Zig crypto trait
# Required: HKDF, GCM, ChaCha20-Poly1305
esp_crypto(
    name = "mbedtls_full",
    disable_mbedtls = False,
    enable_hkdf = True,
    enable_gcm = True,
    enable_chachapoly = True,
)

# =============================================================================
# Newlib (C library configuration)
# =============================================================================

# Nano printf - saves ~20KB but no 64-bit int / C99 support
esp_newlib(
    name = "newlib_nano",
    nano_format = True,
)

# Full printf - supports all formats
esp_newlib(
    name = "newlib_full",
    nano_format = False,
)

# =============================================================================
# LWIP
# =============================================================================

esp_lwip(
    name = "lwip",
    tcpip_task_stack_size = 8192,
    max_sockets = 10,
    max_active_tcp = 16,
    tcp_snd_buf_default = 65535,
    tcp_wnd_default = 65535,
    tcp_recvmbox_size = 64,
)

# High throughput LWIP - for speed tests (same as lwip, kept for future tuning)
esp_lwip(
    name = "lwip_fast",
    tcpip_task_stack_size = 8192,
    max_sockets = 10,
    max_active_tcp = 16,
    tcp_snd_buf_default = 65535,
    tcp_wnd_default = 65535,
    tcp_recvmbox_size = 64,  # Keep 64, higher values break tcp mbox
)

# =============================================================================
# Filesystem
# =============================================================================

esp_spiffs(
    name = "spiffs",
    max_partitions = 3,
)

esp_littlefs(
    name = "littlefs",
    max_partitions = 3,
)

# =============================================================================
# App Configs
# =============================================================================

# For TLS/crypto apps - 128KB stack in PSRAM (DoH needs more)
esp_app(
    name = "app",
    run_in_psram = 131072,  # 128KB for TLS/DoH apps
)

# For simple apps - 32KB stack in PSRAM
esp_app(
    name = "app_32k",
    run_in_psram = 32768,  # 32KB for normal apps
)

# For apps that need flash access during runtime
# Runs directly in app_main (stack in internal RAM)
esp_app(
    name = "app_internal",
    # run_in_psram = 0 (default) - no PSRAM task
)

# FreeRTOS with larger stack for internal RAM apps
esp_freertos(
    name = "freertos_large",
    hz = 1000,
    main_task_stack_size = 65536,  # 64KB for TLS (has 16KB stack arrays)
    task_wdt_timeout_s = 30,
    task_wdt_check_idle_cpu0 = True,
    task_wdt_check_idle_cpu1 = False,
)

# =============================================================================
# ESP32-S3 sdkconfig
# =============================================================================

esp_sdkconfig(
    name = "esp32s3",
    core = ":core",
    freertos = ":freertos",
    log = ":log",
    psram = ":psram",
    wifi = ":wifi",
    lwip = ":lwip",
)

# For WiFi apps - larger stack in internal RAM
esp_sdkconfig(
    name = "esp32s3_wifi",
    core = ":core",
    freertos = ":freertos",  # 4KB main task - app runs in PSRAM task
    log = ":log",
    psram = ":psram",
    wifi = ":wifi",
    lwip = ":lwip",
    crypto = ":no_mbedtls",  # Use pure Zig crypto
    newlib = ":newlib_nano",  # Nano printf saves ~20KB
)

# WiFi with XIP PSRAM - allows using PSRAM task stack
esp_sdkconfig(
    name = "esp32s3_wifi_xip",
    core = ":core",
    freertos = ":freertos",  # Normal stack size, task runs in PSRAM
    log = ":log",
    psram = ":psram_xip",
    wifi = ":wifi",
    lwip = ":lwip",
    crypto = ":no_mbedtls",  # Use pure Zig crypto
    newlib = ":newlib_nano",  # Nano printf saves ~20KB
)

# WiFi with XIP PSRAM - UART console (for Krovo)
esp_sdkconfig(
    name = "esp32s3_wifi_xip_uart",
    core = ":core_uart",
    freertos = ":freertos",
    log = ":log",
    psram = ":psram_xip",
    wifi = ":wifi",
    lwip = ":lwip",
    crypto = ":no_mbedtls",
    newlib = ":newlib_nano",
)

# WiFi with XIP PSRAM + mbedTLS crypto (hardware accelerated)
esp_sdkconfig(
    name = "esp32s3_wifi_xip_mbedtls",
    core = ":core",
    freertos = ":freertos",
    log = ":log",
    psram = ":psram_xip",
    wifi = ":wifi",
    lwip = ":lwip",
    crypto = ":mbedtls_full",  # Use mbedTLS for crypto
    newlib = ":newlib_nano",
)

# High throughput WiFi with XIP PSRAM - for HTTPS speed tests
esp_sdkconfig(
    name = "esp32s3_wifi_xip_fast",
    core = ":core",
    freertos = ":freertos",
    log = ":log",
    psram = ":psram_xip",
    wifi = ":wifi_fast",     # High throughput WiFi
    lwip = ":lwip_fast",     # High throughput LWIP
    crypto = ":no_mbedtls",
    newlib = ":newlib_nano",
)

# High throughput WiFi with XIP PSRAM + mbedTLS - for HTTPS speed tests with HW accel
esp_sdkconfig(
    name = "esp32s3_wifi_xip_mbedtls_fast",
    core = ":core",
    freertos = ":freertos",
    log = ":log",
    psram = ":psram_xip",
    wifi = ":wifi_fast",     # High throughput WiFi
    lwip = ":lwip_fast",     # High throughput LWIP
    crypto = ":mbedtls_full",  # mbedTLS with HW acceleration
    newlib = ":newlib_nano",
)

# WiFi without XIP - for testing flash/PSRAM conflict
# Uses large internal RAM stack (64KB)
esp_sdkconfig(
    name = "esp32s3_wifi_internal",
    core = ":core",
    freertos = ":freertos_large",  # 64KB main task stack in internal RAM
    log = ":log",
    psram = ":psram",  # PSRAM enabled but no XIP
    wifi = ":wifi",
    lwip = ":lwip",
    crypto = ":no_mbedtls",  # Use pure Zig crypto
    newlib = ":newlib_nano",  # Nano printf saves ~20KB
)

# WiFi without XIP + mbedTLS - for apps that need flash access during runtime
# Uses large internal RAM stack (64KB) + mbedTLS for hardware crypto
esp_sdkconfig(
    name = "esp32s3_wifi_internal_mbedtls",
    core = ":core",
    freertos = ":freertos_large",  # 64KB main task stack in internal RAM
    log = ":log",
    psram = ":psram",  # PSRAM enabled but no XIP
    wifi = ":wifi",
    lwip = ":lwip",
    crypto = ":mbedtls_full",  # mbedTLS with HW acceleration
    newlib = ":newlib_nano",  # Nano printf saves ~20KB
)

# =============================================================================
# ESP-SR
# =============================================================================

esp_sr(
    name = "sr",
    afe_interface = "v1",
)

# =============================================================================
# ESP32-S3 with ESP-SR sdkconfig
# =============================================================================

esp_sdkconfig(
    name = "esp32s3_sr",
    core = ":core",
    freertos = ":freertos_large",
    log = ":log",
    psram = ":psram",
    wifi = ":wifi",
    lwip = ":lwip",
    sr = ":sr",
)

esp_validate(
    name = "validate",
    sdkconfig = ":esp32s3",
    app = ":app",
    psram = ":psram",
)
